# CubeInSpace

./: .controlwidget.h.swp  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.user.16  CMakeLists.txt.user.18  CMakeLists.txt.user.3.2-pre1  README.md  abstractscene.h  acceleration_structure.cpp  acceleration_structure.h  actions.cpp  actions.h  asset.cpp  asset.h  camera.cpp  camera.cpp_rickert  camera.h  constants.h  controller_widgets.cpp  controller_widgets.h  controllers.h  controlwidget.cpp  controlwidget.h  cube.cpp  cube.h  custom_line_edit.cpp  custom_line_edit.h  debug.h  dice_roller.cpp  dice_roller.h  ecosim_run_config.cpp  fixed_size_stack.cpp  fixed_size_stack.h  floatingpointslider.cpp  floatingpointslider.h  geom.cpp  geom.h  gl_drawable.cpp  gl_drawable.h  gl_shaders.cpp  (+97 more)
clustering/: cluster.cpp  cluster.h  cluster_data.cpp  cluster_data.h  cluster_membership_texture.cpp  cluster_membership_texture.h  k_means_clusterer.cpp  k_means_clusterer.h  terrain_suitability_score.cpp  terrain_suitability_score.h
common/: CMakeLists.txt  terragen.cpp
dialogs/: cluster_controller_dialog.cpp  cluster_controller_dialog.h  cluster_info_dialog.cpp  cluster_info_dialog.h  custom_line_edit.cpp  custom_line_edit.h  dialogs.cpp  dialogs.h  monthly_rainfall_edit_dlg.cpp  monthly_rainfall_edit_dlg.h  plant_placement_dlg.cpp  plant_placement_dlg.h  plant_selection_dlg.cpp  plant_selection_dlg.h  pointer_info_dlg.cpp  pointer_info_dlg.h  rainfall_edit_dlg.cpp  rainfall_edit_dlg.h  settings_dlg.cpp  settings_dlg.h  temp_edit_dlg.cpp  temp_edit_dlg.h
ecosim/: ecosim_run_config.cpp  ecosim_run_config.h  simulator.cpp  simulator.h  simulator.h.autosave
gl_assets/: asset.cpp  asset.h  grid.cpp  grid.h  rays.cpp  rays.h  shape_factory.cpp  shape_factory.h  sun_asset.cpp  sun_asset.h
gl_core/: camera.cpp  camera.h  central_widget.cpp  central_widget.h  computer.cpp  computer.h  gl_drawable.cpp  glheader.h  glm_wrapper.h  glwidget.cpp  glwidget.h  renderer.cpp  renderer.h  transform.h
gl_texture/: counter_texture.cpp  counter_texture.h  overlay_texture.cpp  overlay_texture.h  texture_element.cpp  texture_element.h  texture_element_2d.cpp  texture_element_2d.h  texture_element_2d_array.cpp  texture_element_2d_array.h
include/: terragen_file_manager
lighting/: light_properties.cpp  light_properties.h  lighting_manager.cpp  lighting_manager.h
resources/: flood_fill_tracker.cpp  flood_fill_tracker.h  resource_wrapper.cpp  resource_wrapper.h  slope.cpp  slope.h  soil_humidity.cpp  soil_humidity.h  soil_infiltration.cpp  soil_infiltration.h  terrain_daily_illumination.cpp  terrain_daily_illumination.h  terrain_shade.cpp  terrain_shade.h  terrain_temperature.cpp  terrain_temperature.h  terrain_water.cpp  terrain_water.h  weighted_soil_humidity.cpp  weighted_soil_humidity.h
shaders/: CMakeLists.txt  base.frag  base.vert  border_overlap_reducer.comp  compute_shader_programs.cpp  compute_shader_programs.h  compute_shaders.cpp  compute_shaders.h  grid.vert  normals_generator.frag  normals_generator.vert  normals_to_slope_converter.comp  orientation.frag  orientation.vert  overlay.frag  overlay.vert  overlay_texture_creator.comp  rendering_shader_programs.cpp  rendering_shader_programs.h  rendering_shaders.cpp  rendering_shaders.h  selection_shader.frag  shader.frag  shader.vert  shader_programs.cpp  shader_programs.h  shaders.cpp  shaders.h  shaders.qrc  shaders.qrc~  slope_based_soil_infiltration.comp  soil_humidity_calculator.comp  terrain.frag  terrain.frag.tmp  terrain.vert  terrain.vert.tmp  terrain_elements.frag  terrain_elements.vert  uniforms.cpp  uniforms.h  (+3 more)
shaders/glsl/: base.frag  base.vert  normals_generator.vert  terrain.frag  terrain.vert  terrain_elements.vert
shaders/glsl/comp/: aggregate_height_setter.comp  closest_cluster_finder.comp  means_recalculator.comp  normals_to_slope_converter.comp  overlay_texture_creator.comp  per_thread_group_min.comp  slope_based_soil_infiltration.comp  soil_humidity_calculator.comp  standing_water_calculator.comp  water_flux.comp
shaders/glsl/comp/overlay_creators/: overlay_texture_creator_altitude.comp  overlay_texture_creator_cluster.comp  overlay_texture_creator_daily_illumination.comp  overlay_texture_creator_shade.comp  overlay_texture_creator_slope.comp  overlay_texture_creator_soil_humidity.comp  overlay_texture_creator_soil_infiltration_rate.comp  overlay_texture_creator_temperature.comp  overlay_texture_creator_weighted_avg_soil_humidity.comp
terragen/: CMakeLists.txt  terragen_file_manager.cpp  terragen_file_manager.h  terragen_file_spec.cpp  terragen_file_spec.h
terrain/: acceleration_structure.cpp  acceleration_structure.h  drawable_terrain.cpp  drawable_terrain.h  padded_terrain.cpp  padded_terrain.h  terrain.cpp  terrain.h  terrain_normals.cpp  terrain_normals.h
utils/: a.out  utils.cpp  utils.h
widgets/: base_slider_controller.cpp  base_slider_controller.h  clustering_controller.cpp  clustering_controller.h  controller_widgets.cpp  controller_widgets.h  ecosim_tracker_widget.cpp  ecosim_tracker_widget.h  histogram_widget.cpp  histogram_widget.h  latitude_controller.cpp  latitude_controller.h  mode_controller.cpp  mode_controller.h  month_controller.cpp  month_controller.h  orientation_widget.cpp  orientation_widget.h  plant_selection_widget.cpp  plant_selection_widget.h  progress_bar_widget.cpp  progress_bar_widget.h  shortcut_controller_row.cpp  shortcut_controller_row.h  soil_infiltration_controller.cpp  soil_infiltration_controller.h  soil_infiltration_shortcuts_widget.cpp  soil_infiltration_shortcuts_widget.h  specie_suitability_list_widget.cpp  specie_suitability_list_widget.h  time_controller.cpp  time_controller.h  water_shortcuts_controller.cpp  water_shortcuts_controller.h
